@@ -1,0 +1,25 @@
+.TH wxPython\-tools 1 "3 Jan 2003" "Debian GNU/Linux" "wxWindows"
+.SH NAME
+img2py \- wxPython tools.
+.br
+img2xpm \- wxPython tools.
+.br
+pycrust \- wxPython tools.
+.br
+pyshell \- wxPython tools.
+.br
+xrced \- wxPython tools.
+.br
+helpviewer \- wxPython tools.
+
+.SH DESCRIPTION
+The real documentation for these tools is available in pydoc format.
+
+.SH SEE ALSO
+.BR pydoc (1)
+
+.SH COPYRIGHT
+This manpage was written by Ron Lee <ron@debian.org> for the Debian GNU/Linux
+distribution of wxWindows.  It may be freely distributed by anyone insane enough
+to find it useful.
+
